--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "core-js": "^3.6.5",
     "vant": "^3.0.0-beta.5",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-rc.1"
+    "vue-router": "^4.0.0-rc.1",
+    "vuex": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
