--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "dependencies": {
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
-    "vant": "^3.0.0-beta.5",
-    "vue": "^3.0.0",
+    "vant": "^3.0.0-beta.6",
+    "vconsole": "^3.3.4",
+    "vue": "^3.0.2",
     "vue-router": "^4.0.0-rc.1",
     "vuex": "^4.0.0-rc.1"
   },
