--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "vconsole": "^3.3.4",
     "vue": "^3.0.2",
     "vue-router": "^4.0.0-rc.1",
-    "vuex": "^4.0.0-rc.1"
+    "vuex": "^4.0.0-rc.1",
+    "vxe-table": "^4.0.0-beta.1",
+    "xe-utils": "^3.0.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
