add:flow view process

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/lodash": "^4.14.165",
     "@vueuse/core": "^4.0.0-rc.5",
     "axios": "^0.21.0",
+    "bpmn-js": "^7.5.0",
     "core-js": "^3.6.5",
     "lodash": "^4.17.20",
     "vant": "^3.0.0-rc.1",
