m2o 和 o2m 重新渲染

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "bpmn-js": "^7.5.0",
     "core-js": "^3.6.5",
     "lodash": "^4.17.20",
-    "vant": "^3.0.0-rc.1",
+    "vant": "^3.0.0",
     "vconsole": "^3.3.4",
     "vue": "^3.0.2",
     "vue-router": "^4.0.1",
