--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bpmn-js": "^7.5.0",
     "core-js": "^3.6.5",
     "lodash": "^4.17.20",
+    "url": "^0.11.0",
     "vant": "^3.0.0",
     "vconsole": "^3.3.4",
     "vue": "^3.0.2",
