--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/lodash": "^4.14.165",
+    "@vant/use": "^1.0.2",
     "@vueuse/core": "^4.0.0-rc.5",
     "axios": "^0.21.0",
     "bpmn-js": "^7.5.0",
