add:reference 数据获取

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,7 @@
     "src/**/*.vue",
     "tests/**/*.ts",
     "tests/**/*.tsx",
-    "src/assets/js/**/*.js"
+    "src/**/*.js"
   ],
   "exclude": [
     "node_modules"
