--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "vconsole": "^3.3.4",
     "vue": "^3.0.2",
     "vue-router": "^4.0.2",
-    "vuex": "^4.0.0-rc.2",
+    "vuex": "^4.0.0",
     "vxe-table": "^4.0.0-beta.5",
     "xe-utils": "^3.0.3"
   },
