--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
     "lint": "vue-cli-service lint --mode production --fix"
   },
   "dependencies": {
-    "@types/lodash": "^4.14.165",
     "@vant/use": "^1.0.2",
     "@vueuse/core": "^4.0.0-rc.5",
     "axios": "^0.21.0",
     "bpmn-js": "^7.5.0",
     "core-js": "^3.6.5",
     "cross-env": "^7.0.3",
-    "lodash": "^4.17.20",
+    "lodash-es": "^4.17.21",
     "url": "^0.11.0",
     "vant": "^3.0.0",
     "vconsole": "^3.3.4",
@@ -28,6 +27,7 @@
     "xe-utils": "^3.0.3"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.4",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/babel-plugin-jsx": "^1.0.3",
