--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "types": [
       "webpack-env"
     ],
-    "typeRoots": ["./node_modules/@types"],
+    "typeRoots": ["./node_modules/@types", "./types"],
     "paths": {
       "@/*": [
         "src/*"
@@ -33,6 +33,8 @@
     "src/**/*.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
+    "src/**/*.d.ts",
+    "types/**/*.d.ts",
     "tests/**/*.ts",
     "tests/**/*.tsx",
     "src/assets/js/odoo/*.js"
