--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,21 +13,15 @@
     "baseUrl": ".",
     "allowJs": true,
     "noEmit": true,
+    "lib": ["dom", "esnext"],
     "types": [
       "webpack-env"
     ],
     "typeRoots": ["./node_modules/@types", "./types"],
     "paths": {
-      "@/*": [
-        "src/*"
-      ]
+      "@/*": ["src/*"],
+      "#/*": ["types/*"]
     },
-    "lib": [
-      "esnext",
-      "dom",
-      "dom.iterable",
-      "scripthost"
-    ]
   },
   "include": [
     "src/**/*.ts",
