--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "cross-env WX_ENV=prod vue-cli-service build",
-    "build:uat": "cross-env WX_ENV=uat vue-cli-service build",
-    "build:dev": "cross-env WX_ENV=dev vue-cli-service build",
+    "build": "vue-cli-service build",
+    "build:uat": "vue-cli-service build --mode uat",
+    "build:dev": "vue-cli-service build --mode development",
     "lint": "vue-cli-service lint --mode production --fix"
   },
   "dependencies": {
@@ -14,7 +14,6 @@
     "axios": "^0.21.0",
     "bpmn-js": "^7.5.0",
     "core-js": "^3.6.5",
-    "cross-env": "^7.0.3",
     "lodash-es": "^4.17.21",
     "url": "^0.11.0",
     "vant": "^3.0.0",
