--- a/package.json
+++ b/package.json
@@ -7,7 +7,17 @@
     "build": "vue-cli-service build",
     "build:uat": "vue-cli-service build --mode uat",
     "build:dev": "vue-cli-service build --mode development",
-    "lint": "vue-cli-service lint --mode production --fix"
+    "lint": "vue-cli-service lint --mode production"
+  },
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{ts, vue}": [
+      "vue-cli-service lint --mode production",
+      "prettier --parser=typescript --write",
+      "git add"
+    ]
   },
   "dependencies": {
     "@vant/use": "^1.0.2",
@@ -35,10 +45,12 @@
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "babel-eslint": "^10.1.0",
+    "chalk": "^4.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
+    "prettier": "^2.2.1",
     "style-resources-loader": "^1.3.2",
     "ts-import-plugin": "^1.6.6",
     "typescript": "~3.9.3",
