--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "vue-cli-service lint --mode production"
   },
   "gitHooks": {
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged",
+    "commit-msg": "node scripts/verifyCommit.js"
   },
   "lint-staged": {
     "*.{ts, vue}": [
@@ -50,6 +51,7 @@
     "eslint-plugin-vue": "^7.0.0-0",
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
+    "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "style-resources-loader": "^1.3.2",
     "ts-import-plugin": "^1.6.6",
