--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vue-cli-service build",
     "build:uat": "vue-cli-service build --mode uat",
     "build:dev": "vue-cli-service build --mode development",
-    "lint": "vue-cli-service lint --mode production"
+    "lint": "vue-cli-service lint --mode production",
+    "commit": "git-cz"
   },
   "gitHooks": {
     "pre-commit": "lint-staged",
@@ -47,6 +48,8 @@
     "@vue/eslint-config-typescript": "^5.0.2",
     "babel-eslint": "^10.1.0",
     "chalk": "^4.1.0",
+    "commitizen": "^4.2.3",
+    "cz-customizable": "^6.3.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
     "less": "^3.12.2",
@@ -63,5 +66,10 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-customizable"
+    }
+  }
 }
