--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-VUE_APP_BASE_API = http://odoo.studio-dev.insuite.net
+VITE_BASE_API = http://odoo.studio-dev.insuite.net
 
-VUE_APP_WX_APP_ID = wxef1dd7f831c0b5f6
+VITE_WX_APP_ID = wxef1dd7f831c0b5f6
 
-VUE_APP_WX_OPEN_ID = oWkYa5j_tQDiPWuWvdcbimgI40Tk
+VITE_WX_OPEN_ID = oWkYa5j_tQDiPWuWvdcbimgI40Tk
