--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-VUE_APP_BASE_API = http://odoo.studio.insuite.cn
+VITE_BASE_API = http://odoo.studio.insuite.cn
 
-VUE_APP_WX_APP_ID = wx33e995dcf375d68a
+VITE_WX_APP_ID = wx33e995dcf375d68a
