--- a/.env.uat
+++ b/.env.uat
@@ -1,6 +1,6 @@
 
 NODE_ENV = production
 
-VUE_APP_BASE_API = http://odoo.studio.insuite.net
+VITE_BASE_API = http://odoo.studio.insuite.net
 
-VUE_APP_WX_APP_ID = wx33e995dcf375d68a
+VITE_WX_APP_ID = wx33e995dcf375d68a
