--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "build:uat": "vue-cli-service build --mode uat",
-    "build:dev": "vue-cli-service build --mode development",
-    "lint": "vue-cli-service lint --mode production"
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build",
+    "build:uat": "vite build --mode uat",
+    "build:dev": "vite build --mode development",
+    "serve": "vite preview",
+    "lint": "eslint \"{src,mock}/**/*.{vue,ts,tsx}\" --fix",
+    "type-check": "vue-tsc --noEmit"
   },
   "gitHooks": {
     "pre-commit": "lint-staged",
@@ -26,8 +28,8 @@
     "@vant/use": "^1.0.2",
     "axios": "^0.21.0",
     "bpmn-js": "^7.5.0",
-    "core-js": "^3.6.5",
     "lodash-es": "^4.17.21",
+    "qs": "^6.10.1",
     "url": "^0.11.0",
     "vant": "^3.0.0",
     "vue": "^3.0.2",
@@ -40,26 +42,20 @@
     "@types/lodash-es": "^4.17.4",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
-    "@vue/babel-plugin-jsx": "^1.0.3",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vitejs/plugin-vue": "^1.1.5",
+    "@vitejs/plugin-vue-jsx": "^1.1.2",
     "@vue/compiler-sfc": "^3.0.0",
-    "@vue/eslint-config-typescript": "^5.0.2",
-    "babel-eslint": "^10.1.0",
     "chalk": "^4.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
     "less": "^3.12.2",
-    "less-loader": "^7.0.2",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
-    "style-resources-loader": "^1.3.2",
-    "ts-import-plugin": "^1.6.6",
     "typescript": "~3.9.3",
     "vconsole": "^3.4.0",
-    "vue-cli-plugin-style-resources-loader": "~0.1.4"
+    "vite": "^2.0.5",
+    "vite-plugin-style-import": "^0.8.1",
+    "vue-tsc": "^0.0.12"
   },
   "browserslist": [
     "> 1%",
