--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "build:uat": "vite build --mode uat",
     "build:dev": "vite build --mode development",
     "serve": "vite preview",
-    "lint": "eslint \"{src,mock}/**/*.{vue,ts,tsx}\" --fix",
+    "lint": "eslint \"src/**/*.{vue,ts,tsx}\" --fix",
     "type-check": "vue-tsc --noEmit"
   },
   "gitHooks": {
     "pre-commit": "lint-staged",
-    "commit-msg": "node scripts/verifyCommit.js"
+    "commit-msg": "node build/verifyCommit.js"
   },
   "lint-staged": {
     "*.ts?(x)": [
@@ -45,6 +45,7 @@
     "@vitejs/plugin-vue": "^1.1.5",
     "@vitejs/plugin-vue-jsx": "^1.1.2",
     "@vue/compiler-sfc": "^3.0.0",
+    "@vue/eslint-config-typescript": "^7.0.0",
     "chalk": "^4.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
@@ -55,7 +56,8 @@
     "vconsole": "^3.4.0",
     "vite": "^2.0.5",
     "vite-plugin-style-import": "^0.8.1",
-    "vue-tsc": "^0.0.12"
+    "vue-tsc": "^0.0.12",
+    "yorkie": "^2.0.0"
   },
   "browserslist": [
     "> 1%",
