--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "build:uat": "vite build --mode uat",
-    "build:dev": "vite build --mode development",
+    "build": "yarn type-check && vite build",
+    "build:uat": "yarn type-check && vite build --mode uat",
+    "build:dev": "yarn type-check && vite build --mode development",
     "serve": "vite preview",
     "lint": "eslint \"src/**/*.{vue,ts,tsx}\" --fix",
     "type-check": "vue-tsc --noEmit"
@@ -56,7 +56,7 @@
     "vconsole": "^3.4.0",
     "vite": "^2.0.5",
     "vite-plugin-style-import": "^0.8.1",
-    "vue-tsc": "^0.0.12",
+    "vue-tsc": "^0.0.20",
     "yorkie": "^2.0.0"
   },
   "browserslist": [
