build: .env.uat

--- a/.env.uat
+++ b/.env.uat
@@ -3,4 +3,4 @@ NODE_ENV = production
 
 VUE_APP_BASE_API = http://odoo.studio.insuite.net
 
-VUE_APP_WX_APP_ID = wx33e995dcf375d68a
+VUE_APP_WX_APP_ID = wx59392d14e4411f29
