chore: .env.prod

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-VUE_APP_BASE_API = https://odoo.studio.insuite.cn
+VITE_BASE_API = https://odoo.studio.insuite.cn
 
 VITE_WX_APP_ID = wx33e995dcf375d68a
