--- a/.env.uat
+++ b/.env.uat
@@ -3,4 +3,4 @@ NODE_ENV = production
 
 VITE_BASE_API = http://odoo.studio.insuite.net
 
-VITE_WX_APP_ID = wx59392d14e4411f29
+VITE_WX_APP_ID = wxef1dd7f831c0b5f6
